# file_scanner

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
