[package]
name = "file-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
walkdir = "2.3.3"
sha2 = "0.10.8"
chrono = "0.4.31"
seahash = "4.1.0"
